--- a/test0.ipynb
+++ b/test0.ipynb
@@ -6,59 +6,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_reactions(post_id, access_token):\n",
-    "    # Định dạng URL cho endpoint Graph API\n",
-    "    url = f'https://graph.facebook.com/v13.0/{post_id}/reactions'\n",
-    "    \n",
-    "    # Thực hiện yêu cầu GET để lấy danh sách người phản ứng\n",
-    "    params = {'access_token': access_token}\n",
-    "    response = requests.get(url, params=params)\n",
-    "\n",
-    "    # Kiểm tra xem yêu cầu có thành công không\n",
-    "    if response.status_code == 200:\n",
-    "        data = response.json()\n",
-    "        return data['data'] if 'data' in data else []\n",
-    "    else:\n",
-    "        print(f\"Error {response.status_code}: {response.text}\")\n",
-    "        return None"
+    "df_1 = pd.read_csv('Data/temp0_38.csv')\n",
+    "df_2 = pd.read_csv('Data/temp39_76.csv')\n",
+    "df_3 = pd.read_csv('Data/temp77_99.csv')\n",
+    "df_4 = pd.read_csv('Data/temp100_129.csv')\n",
+    "df_5 = pd.read_csv('Data/temp130_141.csv')\n",
+    "df_6 = pd.read_csv('Data/temp142_145.csv')\n",
+    "df_7 = pd.read_csv('Data/temp146_185.csv')\n",
+    "df_8 = pd.read_csv('Data/temp200_211.csv')\n",
+    "df_9 = pd.read_csv('Data/temp212_215.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Danh sách người phản ứng:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "# Thay thế bằng ID thực tế của bài đăng và access token của bạn\n",
-    "post_id = '732577415580263'\n",
-    "access_token = 'EAABwzLixnjYBO4k5DLrD5Ct5ZBCnqqaW2PW3xn5ySrY0wxFfsmkjZAjuaCRbKlpB5WpnqMW593SYzrC3NLW7sR3kztwVOzO3Y8KF8AZBWeOON3ZAUZCMFW1OnJLHHBpGptsupVgORB9LJHFZAdX80rjvj0isPZA1G3LLBUAM7zgvJp7aao5QnemQgZCdZBjt6z5RRavJ48XyDPDIZD'\n",
-    "\n",
-    "# Gọi hàm để lấy danh sách người phản ứng\n",
-    "reactions = get_reactions(post_id, access_token)\n",
-    "\n",
-    "# In danh sách người phản ứng\n",
-    "if reactions is not None:\n",
-    "    print(\"Danh sách người phản ứng:\")\n",
-    "    for reaction in reactions:\n",
-    "        print(reaction)\n"
+    "result_df = pd.concat([df_1, df_2, df_3, df_4, df_5, df_6, df_7, df_8, df_9], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = 'Data/temp.csv'\n",
+    "result_df.to_csv(path, index=False)"
    ]
   }
  ],
