--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vnn04/miniconda3/envs/ml-env/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,13 +259,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(raw_df.images_low)):\n",
     "    text = raw_df.images_low.iloc[i]\n",
     "    raw_df.iat[i, raw_df.columns.get_loc('images_low')] = ast.literal_eval(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Thêm cột image_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_count = []\n",
+    "for i in range(len(raw_df)):\n",
+    "    image_count.append(len(raw_df.iloc[i].images_low))\n",
+    "\n",
+    "raw_df['images_count'] = image_count\n",
+    "\n",
+    "raw_df.to_csv('Data/sieuanhhungMarvel.csv', index=False)"
    ]
   },
   {
