--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -1150,7 +1150,7 @@
     "        result = section[start_index:].strip()\n",
     "        print(result)\n",
     "\n",
-    "print(count)\n"
+    "print(count)"
    ]
   }
  ],
