--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -16,15 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import re\n",
-    "import datetime\n",
-    "import json\n",
     "import ast\n",
     "from pprint import pprint"
    ]
@@ -1400,6 +1397,116 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactor_df.to_csv('Data/least_emotional_post_reactors.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Xóa những reactors bị trùng lặp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['user_id', 'gender', 'hometown_id', 'hometown_name'], dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reactor_df = pd.read_csv('Data/least_emotional_post_reactors.csv')\n",
+    "reactor_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactor_df = reactor_df.drop_duplicates(subset='user_id', keep='first')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactor_df.to_csv('Data/least_emotional_post_reactors.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chuyển kiểu dữ liệu cột hometown_id thành chuỗi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                  nan\n",
+       "1      110904208934544\n",
+       "2      106498672718836\n",
+       "9                  nan\n",
+       "10                 nan\n",
+       "            ...       \n",
+       "134                nan\n",
+       "135                nan\n",
+       "136                nan\n",
+       "137                nan\n",
+       "138                nan\n",
+       "Name: hometown_id, Length: 133, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reactor_df['hometown_id'] = reactor_df['hometown_id'].astype(str).str.rstrip('.0')\n",
+    "reactor_df['hometown_id']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Làm sạch cột hometown_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactor_df['hometown_name'] = reactor_df['hometown_name'].str.replace(', Vietnam', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
