--- a/crawl_data.ipynb
+++ b/crawl_data.ipynb
@@ -347,7 +347,8 @@
     "post_list = []\n",
     "\n",
     "for post in fs.get_posts(FANPAGE_LINK,\n",
-    "                    options={\"comments\": False, \"reactions\": False, \"allow_extra_requests\": False},\n",
+    "                    options={\"comments\": False, \"reactions\": False,\n",
+    "                              \"allow_extra_requests\": False},\n",
     "                    pages=1000):\n",
     "    if post['time'] > day_start:\n",
     "        continue\n",
@@ -355,7 +356,9 @@
     "        if post['time'] <= day_end:\n",
     "            break\n",
     "        print(post)\n",
-    "        post_list.append({'post_id':post['post_id'], 'text':post['text'], 'time':post['time'], 'images_low':post['images_lowquality']})\n"
+    "        post_list.append({'post_id':post['post_id'],\n",
+    "                           'text':post['text'], 'time':post['time'],\n",
+    "                             'images_low':post['images_lowquality']})\n"
    ]
   },
   {
@@ -540,7 +543,11 @@
     "    comment = data[0].get('comments', 0)\n",
     "    comments_full = data[0].get('comments_full', [])\n",
     "\n",
-    "    return {'post_id':url, 'like':like, 'love':love, 'haha':haha, 'sad':sad, 'wow':wow, 'care':care, 'angry':angry, 'reaction_count':reaction_count, 'shares':shares, 'comment':comment, 'comments_full':comments_full}\n"
+    "    return {'post_id':url, 'like':like, 'love':love,\n",
+    "             'haha':haha, 'sad':sad, 'wow':wow, 'care':care,\n",
+    "               'angry':angry, 'reaction_count':reaction_count,\n",
+    "                 'shares':shares, 'comment':comment, \n",
+    "                 'comments_full':comments_full}\n"
    ]
   },
   {
@@ -578,7 +585,9 @@
    "source": [
     "path = FOLDER_PATH + 'temp' + \".csv\"\n",
     "\n",
-    "df_temp = pd.DataFrame(result, columns=[\"like\",\"love\",\"haha\",\"sad\",\"wow\",\"care\",\"angry\",\"reaction_count\",\"shares\",\"comment\",\"comments_full\"])\n",
+    "df_temp = pd.DataFrame(result, columns=[\"like\",\"love\",\"haha\",\"sad\",\"wow\",\n",
+    "                                        \"care\",\"angry\",\"reaction_count\",\n",
+    "                                        \"shares\",\"comment\",\"comments_full\"])\n",
     "df_temp.to_csv(path, index=False)"
    ]
   },
