Update delete user, password

--- a/crawl_data.ipynb
+++ b/crawl_data.ipynb
@@ -65,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_email = \"nguyentrongtin18042004@gmail.com\"\n",
-    "user_password = \"2202259634md506647\""
+    "user_email = \"your_email\"\n",
+    "user_password = \"your_password\""
    ]
   },
   {
